added notes swagger doc
