# docs/swagger.yaml
@@ -19,11 +19,45 @@ definitions:
       updated_at:
         type: string
     type: object
+  domain.Notebook:
+    properties:
+      author_id:
+        type: integer
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        type: string
+    type: object
   domain.Tokens:
     properties:
       access_token:
         type: string
       refresh_token:
+        type: string
+    type: object
+  v1.noteCreateInput:
+    properties:
+      content:
+        type: string
+      title:
+        type: string
+    required:
+    - content
+    - title
+    type: object
+  v1.noteUpdateInput:
+    properties:
+      content:
+        type: string
+      pinted:
+        type: boolean
+      title:
         type: string
     type: object
   v1.notebookUpdateInput:
@@ -221,7 +255,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/domain.Note'
+              $ref: '#/definitions/domain.Notebook'
             type: array
         "400":
           description: Bad Request
@@ -346,7 +380,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/domain.Note'
+            $ref: '#/definitions/domain.Notebook'
         "400":
           description: Bad Request
           schema:
@@ -382,7 +416,7 @@ paths:
         name: id
         required: true
         type: string
-      - description: sign up info
+      - description: update info
         in: body
         name: input
         required: true
@@ -418,6 +452,250 @@ paths:
       summary: Update notebook
       tags:
       - notebooks
+  /notebook/{notebook_id}/note:
+    get:
+      consumes:
+      - application/json
+      description: get all note from notebook
+      parameters:
+      - description: notebook_id
+        in: path
+        name: notebook_id
+        required: true
+        type: string
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Note'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - user-auth: []
+      summary: Get all notes
+      tags:
+      - notes
+    post:
+      consumes:
+      - application/json
+      description: create new note
+      parameters:
+      - description: create note input
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/v1.noteCreateInput'
+      - description: notebook_id
+        in: path
+        name: notebook_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - user-auth: []
+      summary: Create note in notebook
+      tags:
+      - notes
+  /notebook/{notebook_id}/note/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete note from notebook by id
+      parameters:
+      - description: notebook_id
+        in: path
+        name: notebook_id
+        required: true
+        type: string
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - user-auth: []
+      summary: Delete note
+      tags:
+      - notes
+    get:
+      consumes:
+      - application/json
+      description: get a note by id
+      parameters:
+      - description: notebook_id
+        in: path
+        name: notebook_id
+        required: true
+        type: string
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Note'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - user-auth: []
+      summary: Get note from notebook
+      tags:
+      - notes
+    put:
+      consumes:
+      - application/json
+      description: update note from notebook by id
+      parameters:
+      - description: notebook_id
+        in: path
+        name: notebook_id
+        required: true
+        type: string
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: update info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/v1.noteUpdateInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Note'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - user-auth: []
+      summary: Update note
+      tags:
+      - notes
 securityDefinitions:
   UserAuth:
     in: header
